<resources>

    <!-- Basic Strings -->
    <string name="error">Error</string>
    <string name="info">Información</string>
    <string name="validate">Validación</string>

    <!-- Main activity -->
    <string name="app_name">Petagram</string>
    <string name="app_title">Bienvenido</string>
    <string name="see_users">Usuarios</string>
    <string name="favorite_message">Agregado a favoritos</string>
    <string name="favorite_action_text">Deshacer</string>
    <string name="exit_confirm_tittle">Salir</string>
    <string name="exit_confirm">¿Seguro que desea salir?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="login">Iniciar sesión</string>
    <string name="singin">Registrarse</string>

    <!-- Contact signIn -->
    <string name="complete_name">Nombre completo</string>
    <string name="name">Nombre</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="phone">Teléfono</string>
    <string name="phone_short">Tel.</string>
    <string name="email">Email</string>
    <string name="address">Dirección</string>
    <string name="description_short">Descripción</string>
    <string name="next">Siguiente</string>
    <string name="tvi_sign_in_title">Confirmar Datos</string>
    <string name="back">Atrás</string>
    <string name="sex">Sexo</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>

    <!--Contact detail -->
    <string name="select_image">Seleccione una imagen</string>

    <!-- Messages -->
    <string name="name_mandatory">El campo Nombre es obligatorio</string>
    <string name="birthday_mandatory">El campo Fecha de nacimiento es obligatorio</string>
    <string name="phone_mandatory">El campo Teléfono es obligatorio</string>
    <string name="email_mandatory">El campo Email es obligatorio</string>
    <string name="msg_like">Diste like a</string>
    <string name="msg_love">Diste me encanta a</string>
    <string name="generic_error">Error general</string>
    <string name="no_image_selected">Ninguna imágen seleccionada</string>
    <string name="no_photo_taken">No se ha tomado ninguna foto</string>

    <!-- Menu options -->
    <string name="mi_about">Acerca de</string>
    <string name="mi_settings">Configuraciones</string>
    <string name="mi_exit">Salir</string>
    <string name="mi_delete">Eliminar</string>
    <string name="mi_choose_picture">Seleccionar foto</string>
    <string name="mi_take_picture">Tomar foto</string>
    <string name="mi_see">Ver</string>
    <string name="mi_see_details">Ver detalles</string>
    <string name="mi_like">Me gusta</string>
    <string name="mi_love">Me encanta</string>
    <string name="mi_refresh">Refrescar</string>

    <string name="mi_contact">Contactar</string>
    <string name="comment">Comentario</string>
    <string name="send">Enviar</string>
    <string name="mi_turn_bluetooth">Bluetooth</string>
    <string name="no_bluetooth">El dispositivo no cuenta con Bluetooth</string>
    <string name="blt_disable">Se ha desactivado el Bluetooth</string>
    <string name="blt_enable">Se ha activado el Bluetooth</string>
    <string name="file_form_title">Escritura de archivos</string>
    <string name="save">Guardar</string>
    <string name="filename">Nombre del archivo</string>
    <string name="filecontent">Contenido</string>
    <string name="files">Archivos</string>
    <string name="file_name_empty">Ingrese el nombre del archivo</string>
    <string name="file_name_invalid">La extensión soportada es .txt</string>
    <string name="file_content_empty">Ingrese el contenido del archivo</string>
    <string name="file_created">Se ha creado el archivo</string>
    <string name="file_creation_error">Error creando el archivo</string>
    <string name="ffa_tittle">Archivos</string>
    <string name="sis1_tittle">Registrarse</string>
    <string name="sisc_tittle">Confirmación</string>
    <string name="cla_tittle">Usuarios</string>
    <string name="cda_title">Datos del usuario</string>
    <string name="mi_io_file">Almacenamiento interno</string>
    <string name="mi_shared_pref">Preferencia compartida</string>
    <string name="mi_external_storage">Almacenamiento externo</string>
    <string name="mi_see_preferences">Ver preferencias</string>
    <string name="preference_add">Preferencia agregada</string>
    <string name="preference_add_error">Error agregando preferencia</string>
    <string name="preferences">Preferencias</string>
    <string name="no_preferences_found">No hay preferencias que mostrar</string>
    <string name="confirm">Confirmar</string>
    <string name="error_create_contact">Error creando el contacto</string>
    <string name="create_contact_succes">Registro exitoso</string>
    <string name="error_list_contact">Error cargando la lista de contactos</string>
    <string name="conf_delete_contact">¿desea eliminar el contaco?</string>

    <string-array name="user_tabs">
        <item>Usuarios</item>
        <item>Mi perfil</item>
    </string-array>
</resources>
