<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_about"
        android:icon="@drawable/ic_about"
        android:orderInCategory="1"
        android:title="@string/mi_about"
        tools:icon="@drawable/ic_about"></item>

    <item android:id="@+id/mi_settings"
        android:title="@string/mi_settings"
        android:orderInCategory="2"
        android:icon="@drawable/ic_settings"
        tools:icon="@drawable/ic_settings"></item>

    <item android:id="@+id/mi_contact"
        android:title="@string/mi_contact"
        android:orderInCategory="3"
        android:icon="@drawable/ic_comment"></item>

    <item android:id="@+id/mi_refresh"
        android:title="@string/mi_refresh"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:icon="@drawable/ic_refresh_24dp"></item>


    <item android:id="@+id/mi_exit"
        android:title="@string/mi_exit"
        android:orderInCategory="5"
        android:icon="@drawable/ic_close_sesion"
        tools:icon="@drawable/ic_close_sesion"></item>
</menu>

