<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include android:id="@+id/mainAcionBar"
            layout="@layout/action_bar">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/layout_padding"
                android:background="@color/white">

                <EditText
                    android:id="@+id/edt_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <EditText
                    android:id="@+id/edt_contact_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/edt_contact_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/comment"/>

            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_contact_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/send"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal|center"
                app:cornerRadius="0dp"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>