<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignInStep1Activity"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txiCompleteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complete_name"
                android:textSize="@dimen/basic_text_input_size"
                android:textColor="@color/textColor"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txiBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:clickable="true"
                android:focusable="false"
                android:textSize="@dimen/basic_text_input_size"
                android:textColor="@color/textColor"
                android:editable="false"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_sing_in_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/next"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal|center"
                app:cornerRadius="0dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>







