<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardview_contact"
    android:layout_margin="@dimen/basic_margin"
    android:padding="@dimen/layout_padding"
    card_view:cardCornerRadius="@dimen/card_corner"
     >
    <LinearLayout
        android:id="@+id/contact_detail_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/basic_margin">

        <ImageView
            android:id="@+id/imgContactProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:src="@drawable/ic_person_24dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvi_cardview_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_name"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="left"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone_24dp"
                        android:layout_gravity="center_vertical"/>
                    <TextView android:id="@+id/tvi_cardview_contact_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/basic_text_size"
                        android:text="@string/phone"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_margin_left"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:paddingBottom="@dimen/basic_margin">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_24dp"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/tvi_cardview_contact_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/basic_text_size"
                        android:text="@string/email"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_margin_left"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorAccent">

                <ImageButton
                    android:id="@+id/btnLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_like"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@android:color/transparent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                    <TextView
                        android:id="@+id/tvi_card_view_contact_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="5"
                        android:textFontWeight="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginRight="@dimen/basic_margin"/>
                    <ImageView
                        android:id="@+id/ImageLikeCounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_like_hl"
                        android:background="@android:color/transparent"
                        android:layout_margin="@dimen/basic_margin"
                        android:layout_gravity="center"
                        />
                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>